[package]
name = "sickle_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { path = "crates/sickle_math" }
sickle_macros = { path = "crates/sickle_macros" }
sickle_ui_scaffold = { path = "crates/sickle_ui_scaffold" }

bevy = { git = "https://github.com/pcwalton/bevy.git", branch = "brp", version = "0.14.0-dev" }
#bevy_reflect = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
