[package]
name = "sickle_ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "014rc4" }
sickle_macros = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "014rc4" }
sickle_ui_scaffold = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "014rc4" }

bevy = { version = "0.14.0-rc.4" }
bevy_reflect = { version = "0.14.0-rc.4" }
bevy_ecs_macros = { version = "0.14.0-rc.4" }
serde = { version = "1.0", features = ["derive"] }
