[package]
name = "sickle_ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "bevy_014_upgrade" }
sickle_macros = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "bevy_014_upgrade" }
sickle_ui_scaffold = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "bevy_014_upgrade" }

bevy = { version = "0.14.0" }
bevy_ecs_macros = { version = "0.14.0" }
serde = { version = "1.0", features = ["derive"] }
