[package]
name = "sickle_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { git = "https://github.com/pcwalton/bevy.git", branch = "brp", version = "0.14.0-dev" }
serde = { version = "1.0", features = ["derive"] }
