[package]
name = "sickle_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.14.0-rc.4", git = "https://github.com/bevyengine/bevy", tag = "v0.14.0-rc.4" }
serde = { version = "1.0", features = ["derive"] }
